ionos/dome-wallet/wallet-driving-application/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: wallet-driving-application
  name: wallet-driving-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: wallet-driving-application
      app.kubernetes.io/name: wallet-driving-application
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: wallet-driving-application
        app.kubernetes.io/name: wallet-driving-application
    spec:
      containers:
      - image: in2kizuna/wallet-driving-application:v1.0.0
        imagePullPolicy: Always
        name: wallet-driving-application
