ionos/dome-wallet/wallet-driving-application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallet-driving-application
spec:
  ports:
  - name: wallet-driving-application
    port: 80
    targetPort: 8088
  selector:
    app.kubernetes.io/name: wallet-driving-application
