ionos/dome-wallet/wallet-driving-application/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-driving-application
  namespace: dome-wallet
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-dome-wallet
spec:
  ingressClassName: nginx
  rules:
  - host: dome-wallet.eu
    http:
      paths:
      - backend:
          service:
            name: wallet-driving-application
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dome-wallet.eu
    secretName: dome-wallet-secret
